parser.output
Grammar

    0 $accept: program $end

    1 program: block PERIOD

    2 block: constdecl vardecl procdecls statement

    3 constdecl: CONSTSYM constlist SEMICOLON
    4          | ε

    5 constlist: constdef
    6          | constlist COMMA constdef

    7 constdef: IDENT EQL NUMBER

    8 vardecl: VARSYM varlist SEMICOLON
    9        | ε

   10 varlist: vardef
   11        | varlist COMMA vardef

   12 vardef: IDENT

   13 procdecls: procdecls procdecl procbody
   14          | ε

   15 procdecl: PROCSYM IDENT SEMICOLON

   16 procbody: block SEMICOLON

   17 statement: assignmentstm
   18          | callstm
   19          | compoundstm
   20          | ifstm
   21          | whilestm
   22          | readstm
   23          | writestm
   24          | repeatstm
   25          | forstm
   26          | ε

   27 assignmentstm: ident BECOMES expression

   28 callstm: CALLSYM ident

   29 compoundstm: BEGINSYM statements ENDSYM

   30 statements: statement
   31           | statements SEMICOLON statement

   32 ifstm: IFSYM condition THENSYM statement

   33 whilestm: WHILESYM condition DOSYM statement

   34 repeatstm: REPEATSYM statement UNTILSYM condition

   35 forstm: FORSYM condition WITHSYM statement THENSYM statement

   36 readstm: READSYM LPAREN readvarlist RPAREN

   37 readvarlist: readvar
   38            | readvarlist COMMA readvar

   39 readvar: ident

   40 writestm: WRITESYM LPAREN writeexplist RPAREN

   41 writeexplist: expression
   42             | writeexplist COMMA expression

   43 condition: ODDSYM expression
   44          | expression EQL expression
   45          | expression NEQ expression
   46          | expression LSS expression
   47          | expression LEQ expression
   48          | expression GTR expression
   49          | expression GEQ expression

   50 expression: PLUS term
   51           | MINUS term
   52           | term
   53           | expression PLUS term
   54           | expression MINUS term

   55 term: factor
   56     | term TIMES factor
   57     | term SLASH factor

   58 factor: ident
   59       | NUMBER
   60       | LPAREN expression RPAREN

   61 ident: IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BEGINSYM (258) 29
    CALLSYM (259) 28
    CONSTSYM (260) 3
    DOSYM (261) 33
    ENDSYM (262) 29
    IFSYM (263) 32
    ODDSYM (264) 43
    PROCSYM (265) 15
    UNTILSYM (266) 34
    WITHSYM (267) 35
    READSYM (268) 36
    THENSYM (269) 32 35
    VARSYM (270) 8
    WHILESYM (271) 33
    WRITESYM (272) 40
    REPEATSYM (273) 34
    FORSYM (274) 35
    BECOMES (275) 27
    LSS (276) 46
    LEQ (277) 47
    GTR (278) 48
    GEQ (279) 49
    PLUS (280) 50 53
    MINUS (281) 51 54
    TIMES (282) 56
    SLASH (283) 57
    LPAREN (284) 36 40 60
    RPAREN (285) 36 40 60
    EQL (286) 7 44
    COMMA (287) 6 11 38 42
    PERIOD (288) 1
    NEQ (289) 45
    SEMICOLON (290) 3 8 15 16 31
    IDENT <ident> (291) 7 12 15 61
    NUMBER <number> (292) 7 59


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    program (39)
        on left: 1
        on right: 0
    block (40)
        on left: 2
        on right: 1 16
    constdecl (41)
        on left: 3 4
        on right: 2
    constlist (42)
        on left: 5 6
        on right: 3 6
    constdef (43)
        on left: 7
        on right: 5 6
    vardecl (44)
        on left: 8 9
        on right: 2
    varlist (45)
        on left: 10 11
        on right: 8 11
    vardef (46)
        on left: 12
        on right: 10 11
    procdecls (47)
        on left: 13 14
        on right: 2 13
    procdecl (48)
        on left: 15
        on right: 13
    procbody (49)
        on left: 16
        on right: 13
    statement (50)
        on left: 17 18 19 20 21 22 23 24 25 26
        on right: 2 30 31 32 33 34 35
    assignmentstm (51)
        on left: 27
        on right: 17
    callstm (52)
        on left: 28
        on right: 18
    compoundstm (53)
        on left: 29
        on right: 19
    statements (54)
        on left: 30 31
        on right: 29 31
    ifstm (55)
        on left: 32
        on right: 20
    whilestm (56)
        on left: 33
        on right: 21
    repeatstm (57)
        on left: 34
        on right: 24
    forstm (58)
        on left: 35
        on right: 25
    readstm (59)
        on left: 36
        on right: 22
    readvarlist (60)
        on left: 37 38
        on right: 36 38
    readvar (61)
        on left: 39
        on right: 37 38
    writestm (62)
        on left: 40
        on right: 23
    writeexplist (63)
        on left: 41 42
        on right: 40 42
    condition (64)
        on left: 43 44 45 46 47 48 49
        on right: 32 33 34 35
    expression (65)
        on left: 50 51 52 53 54
        on right: 27 41 42 43 44 45 46 47 48 49 53 54 60
    term (66)
        on left: 55 56 57
        on right: 50 51 52 53 54 56 57
    factor (67)
        on left: 58 59 60
        on right: 55 56 57
    ident <number> (68)
        on left: 61
        on right: 27 28 39 58


State 0

    0 $accept: • program $end

    CONSTSYM  shift, and go to state 1

    $default  reduce using rule 4 (constdecl)

    program    go to state 2
    block      go to state 3
    constdecl  go to state 4


State 1

    3 constdecl: CONSTSYM • constlist SEMICOLON

    IDENT  shift, and go to state 5

    constlist  go to state 6
    constdef   go to state 7


State 2

    0 $accept: program • $end

    $end  shift, and go to state 8


State 3

    1 program: block • PERIOD

    PERIOD  shift, and go to state 9


State 4

    2 block: constdecl • vardecl procdecls statement

    VARSYM  shift, and go to state 10

    $default  reduce using rule 9 (vardecl)

    vardecl  go to state 11


State 5

    7 constdef: IDENT • EQL NUMBER

    EQL  shift, and go to state 12


State 6

    3 constdecl: CONSTSYM constlist • SEMICOLON
    6 constlist: constlist • COMMA constdef

    COMMA      shift, and go to state 13
    SEMICOLON  shift, and go to state 14


State 7

    5 constlist: constdef •

    $default  reduce using rule 5 (constlist)


State 8

    0 $accept: program $end •

    $default  accept


State 9

    1 program: block PERIOD •

    $default  reduce using rule 1 (program)


State 10

    8 vardecl: VARSYM • varlist SEMICOLON

    IDENT  shift, and go to state 15

    varlist  go to state 16
    vardef   go to state 17


State 11

    2 block: constdecl vardecl • procdecls statement

    $default  reduce using rule 14 (procdecls)

    procdecls  go to state 18


State 12

    7 constdef: IDENT EQL • NUMBER

    NUMBER  shift, and go to state 19


State 13

    6 constlist: constlist COMMA • constdef

    IDENT  shift, and go to state 5

    constdef  go to state 20


State 14

    3 constdecl: CONSTSYM constlist SEMICOLON •

    $default  reduce using rule 3 (constdecl)


State 15

   12 vardef: IDENT •

    $default  reduce using rule 12 (vardef)


State 16

    8 vardecl: VARSYM varlist • SEMICOLON
   11 varlist: varlist • COMMA vardef

    COMMA      shift, and go to state 21
    SEMICOLON  shift, and go to state 22


State 17

   10 varlist: vardef •

    $default  reduce using rule 10 (varlist)


State 18

    2 block: constdecl vardecl procdecls • statement
   13 procdecls: procdecls • procdecl procbody

    BEGINSYM   shift, and go to state 23
    CALLSYM    shift, and go to state 24
    IFSYM      shift, and go to state 25
    PROCSYM    shift, and go to state 26
    READSYM    shift, and go to state 27
    WHILESYM   shift, and go to state 28
    WRITESYM   shift, and go to state 29
    REPEATSYM  shift, and go to state 30
    FORSYM     shift, and go to state 31
    IDENT      shift, and go to state 32

    $default  reduce using rule 26 (statement)

    procdecl       go to state 33
    statement      go to state 34
    assignmentstm  go to state 35
    callstm        go to state 36
    compoundstm    go to state 37
    ifstm          go to state 38
    whilestm       go to state 39
    repeatstm      go to state 40
    forstm         go to state 41
    readstm        go to state 42
    writestm       go to state 43
    ident          go to state 44


State 19

    7 constdef: IDENT EQL NUMBER •

    $default  reduce using rule 7 (constdef)


State 20

    6 constlist: constlist COMMA constdef •

    $default  reduce using rule 6 (constlist)


State 21

   11 varlist: varlist COMMA • vardef

    IDENT  shift, and go to state 15

    vardef  go to state 45


State 22

    8 vardecl: VARSYM varlist SEMICOLON •

    $default  reduce using rule 8 (vardecl)


State 23

   29 compoundstm: BEGINSYM • statements ENDSYM

    BEGINSYM   shift, and go to state 23
    CALLSYM    shift, and go to state 24
    IFSYM      shift, and go to state 25
    READSYM    shift, and go to state 27
    WHILESYM   shift, and go to state 28
    WRITESYM   shift, and go to state 29
    REPEATSYM  shift, and go to state 30
    FORSYM     shift, and go to state 31
    IDENT      shift, and go to state 32

    $default  reduce using rule 26 (statement)

    statement      go to state 46
    assignmentstm  go to state 35
    callstm        go to state 36
    compoundstm    go to state 37
    statements     go to state 47
    ifstm          go to state 38
    whilestm       go to state 39
    repeatstm      go to state 40
    forstm         go to state 41
    readstm        go to state 42
    writestm       go to state 43
    ident          go to state 44


State 24

   28 callstm: CALLSYM • ident

    IDENT  shift, and go to state 32

    ident  go to state 48


State 25

   32 ifstm: IFSYM • condition THENSYM statement

    ODDSYM  shift, and go to state 49
    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    condition   go to state 54
    expression  go to state 55
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 26

   15 procdecl: PROCSYM • IDENT SEMICOLON

    IDENT  shift, and go to state 59


State 27

   36 readstm: READSYM • LPAREN readvarlist RPAREN

    LPAREN  shift, and go to state 60


State 28

   33 whilestm: WHILESYM • condition DOSYM statement

    ODDSYM  shift, and go to state 49
    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    condition   go to state 61
    expression  go to state 55
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 29

   40 writestm: WRITESYM • LPAREN writeexplist RPAREN

    LPAREN  shift, and go to state 62


State 30

   34 repeatstm: REPEATSYM • statement UNTILSYM condition

    BEGINSYM   shift, and go to state 23
    CALLSYM    shift, and go to state 24
    IFSYM      shift, and go to state 25
    READSYM    shift, and go to state 27
    WHILESYM   shift, and go to state 28
    WRITESYM   shift, and go to state 29
    REPEATSYM  shift, and go to state 30
    FORSYM     shift, and go to state 31
    IDENT      shift, and go to state 32

    $default  reduce using rule 26 (statement)

    statement      go to state 63
    assignmentstm  go to state 35
    callstm        go to state 36
    compoundstm    go to state 37
    ifstm          go to state 38
    whilestm       go to state 39
    repeatstm      go to state 40
    forstm         go to state 41
    readstm        go to state 42
    writestm       go to state 43
    ident          go to state 44


State 31

   35 forstm: FORSYM • condition WITHSYM statement THENSYM statement

    ODDSYM  shift, and go to state 49
    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    condition   go to state 64
    expression  go to state 55
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 32

   61 ident: IDENT •

    $default  reduce using rule 61 (ident)


State 33

   13 procdecls: procdecls procdecl • procbody

    CONSTSYM  shift, and go to state 1

    $default  reduce using rule 4 (constdecl)

    block      go to state 65
    constdecl  go to state 4
    procbody   go to state 66


State 34

    2 block: constdecl vardecl procdecls statement •

    $default  reduce using rule 2 (block)


State 35

   17 statement: assignmentstm •

    $default  reduce using rule 17 (statement)


State 36

   18 statement: callstm •

    $default  reduce using rule 18 (statement)


State 37

   19 statement: compoundstm •

    $default  reduce using rule 19 (statement)


State 38

   20 statement: ifstm •

    $default  reduce using rule 20 (statement)


State 39

   21 statement: whilestm •

    $default  reduce using rule 21 (statement)


State 40

   24 statement: repeatstm •

    $default  reduce using rule 24 (statement)


State 41

   25 statement: forstm •

    $default  reduce using rule 25 (statement)


State 42

   22 statement: readstm •

    $default  reduce using rule 22 (statement)


State 43

   23 statement: writestm •

    $default  reduce using rule 23 (statement)


State 44

   27 assignmentstm: ident • BECOMES expression

    BECOMES  shift, and go to state 67


State 45

   11 varlist: varlist COMMA vardef •

    $default  reduce using rule 11 (varlist)


State 46

   30 statements: statement •

    $default  reduce using rule 30 (statements)


State 47

   29 compoundstm: BEGINSYM statements • ENDSYM
   31 statements: statements • SEMICOLON statement

    ENDSYM     shift, and go to state 68
    SEMICOLON  shift, and go to state 69


State 48

   28 callstm: CALLSYM ident •

    $default  reduce using rule 28 (callstm)


State 49

   43 condition: ODDSYM • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 70
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 50

   50 expression: PLUS • term

    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    term    go to state 71
    factor  go to state 57
    ident   go to state 58


State 51

   51 expression: MINUS • term

    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    term    go to state 72
    factor  go to state 57
    ident   go to state 58


State 52

   60 factor: LPAREN • expression RPAREN

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 73
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 53

   59 factor: NUMBER •

    $default  reduce using rule 59 (factor)


State 54

   32 ifstm: IFSYM condition • THENSYM statement

    THENSYM  shift, and go to state 74


State 55

   44 condition: expression • EQL expression
   45          | expression • NEQ expression
   46          | expression • LSS expression
   47          | expression • LEQ expression
   48          | expression • GTR expression
   49          | expression • GEQ expression
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    LSS    shift, and go to state 75
    LEQ    shift, and go to state 76
    GTR    shift, and go to state 77
    GEQ    shift, and go to state 78
    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80
    EQL    shift, and go to state 81
    NEQ    shift, and go to state 82


State 56

   52 expression: term •
   56 term: term • TIMES factor
   57     | term • SLASH factor

    TIMES  shift, and go to state 83
    SLASH  shift, and go to state 84

    $default  reduce using rule 52 (expression)


State 57

   55 term: factor •

    $default  reduce using rule 55 (term)


State 58

   58 factor: ident •

    $default  reduce using rule 58 (factor)


State 59

   15 procdecl: PROCSYM IDENT • SEMICOLON

    SEMICOLON  shift, and go to state 85


State 60

   36 readstm: READSYM LPAREN • readvarlist RPAREN

    IDENT  shift, and go to state 32

    readvarlist  go to state 86
    readvar      go to state 87
    ident        go to state 88


State 61

   33 whilestm: WHILESYM condition • DOSYM statement

    DOSYM  shift, and go to state 89


State 62

   40 writestm: WRITESYM LPAREN • writeexplist RPAREN

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    writeexplist  go to state 90
    expression    go to state 91
    term          go to state 56
    factor        go to state 57
    ident         go to state 58


State 63

   34 repeatstm: REPEATSYM statement • UNTILSYM condition

    UNTILSYM  shift, and go to state 92


State 64

   35 forstm: FORSYM condition • WITHSYM statement THENSYM statement

    WITHSYM  shift, and go to state 93


State 65

   16 procbody: block • SEMICOLON

    SEMICOLON  shift, and go to state 94


State 66

   13 procdecls: procdecls procdecl procbody •

    $default  reduce using rule 13 (procdecls)


State 67

   27 assignmentstm: ident BECOMES • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 95
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 68

   29 compoundstm: BEGINSYM statements ENDSYM •

    $default  reduce using rule 29 (compoundstm)


State 69

   31 statements: statements SEMICOLON • statement

    BEGINSYM   shift, and go to state 23
    CALLSYM    shift, and go to state 24
    IFSYM      shift, and go to state 25
    READSYM    shift, and go to state 27
    WHILESYM   shift, and go to state 28
    WRITESYM   shift, and go to state 29
    REPEATSYM  shift, and go to state 30
    FORSYM     shift, and go to state 31
    IDENT      shift, and go to state 32

    $default  reduce using rule 26 (statement)

    statement      go to state 96
    assignmentstm  go to state 35
    callstm        go to state 36
    compoundstm    go to state 37
    ifstm          go to state 38
    whilestm       go to state 39
    repeatstm      go to state 40
    forstm         go to state 41
    readstm        go to state 42
    writestm       go to state 43
    ident          go to state 44


State 70

   43 condition: ODDSYM expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 43 (condition)


State 71

   50 expression: PLUS term •
   56 term: term • TIMES factor
   57     | term • SLASH factor

    TIMES  shift, and go to state 83
    SLASH  shift, and go to state 84

    $default  reduce using rule 50 (expression)


State 72

   51 expression: MINUS term •
   56 term: term • TIMES factor
   57     | term • SLASH factor

    TIMES  shift, and go to state 83
    SLASH  shift, and go to state 84

    $default  reduce using rule 51 (expression)


State 73

   53 expression: expression • PLUS term
   54           | expression • MINUS term
   60 factor: LPAREN expression • RPAREN

    PLUS    shift, and go to state 79
    MINUS   shift, and go to state 80
    RPAREN  shift, and go to state 97


State 74

   32 ifstm: IFSYM condition THENSYM • statement

    BEGINSYM   shift, and go to state 23
    CALLSYM    shift, and go to state 24
    IFSYM      shift, and go to state 25
    READSYM    shift, and go to state 27
    WHILESYM   shift, and go to state 28
    WRITESYM   shift, and go to state 29
    REPEATSYM  shift, and go to state 30
    FORSYM     shift, and go to state 31
    IDENT      shift, and go to state 32

    $default  reduce using rule 26 (statement)

    statement      go to state 98
    assignmentstm  go to state 35
    callstm        go to state 36
    compoundstm    go to state 37
    ifstm          go to state 38
    whilestm       go to state 39
    repeatstm      go to state 40
    forstm         go to state 41
    readstm        go to state 42
    writestm       go to state 43
    ident          go to state 44


State 75

   46 condition: expression LSS • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 99
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 76

   47 condition: expression LEQ • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 100
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 77

   48 condition: expression GTR • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 101
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 78

   49 condition: expression GEQ • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 102
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 79

   53 expression: expression PLUS • term

    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    term    go to state 103
    factor  go to state 57
    ident   go to state 58


State 80

   54 expression: expression MINUS • term

    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    term    go to state 104
    factor  go to state 57
    ident   go to state 58


State 81

   44 condition: expression EQL • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 105
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 82

   45 condition: expression NEQ • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 106
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 83

   56 term: term TIMES • factor

    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    factor  go to state 107
    ident   go to state 58


State 84

   57 term: term SLASH • factor

    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    factor  go to state 108
    ident   go to state 58


State 85

   15 procdecl: PROCSYM IDENT SEMICOLON •

    $default  reduce using rule 15 (procdecl)


State 86

   36 readstm: READSYM LPAREN readvarlist • RPAREN
   38 readvarlist: readvarlist • COMMA readvar

    RPAREN  shift, and go to state 109
    COMMA   shift, and go to state 110


State 87

   37 readvarlist: readvar •

    $default  reduce using rule 37 (readvarlist)


State 88

   39 readvar: ident •

    $default  reduce using rule 39 (readvar)


State 89

   33 whilestm: WHILESYM condition DOSYM • statement

    BEGINSYM   shift, and go to state 23
    CALLSYM    shift, and go to state 24
    IFSYM      shift, and go to state 25
    READSYM    shift, and go to state 27
    WHILESYM   shift, and go to state 28
    WRITESYM   shift, and go to state 29
    REPEATSYM  shift, and go to state 30
    FORSYM     shift, and go to state 31
    IDENT      shift, and go to state 32

    $default  reduce using rule 26 (statement)

    statement      go to state 111
    assignmentstm  go to state 35
    callstm        go to state 36
    compoundstm    go to state 37
    ifstm          go to state 38
    whilestm       go to state 39
    repeatstm      go to state 40
    forstm         go to state 41
    readstm        go to state 42
    writestm       go to state 43
    ident          go to state 44


State 90

   40 writestm: WRITESYM LPAREN writeexplist • RPAREN
   42 writeexplist: writeexplist • COMMA expression

    RPAREN  shift, and go to state 112
    COMMA   shift, and go to state 113


State 91

   41 writeexplist: expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 41 (writeexplist)


State 92

   34 repeatstm: REPEATSYM statement UNTILSYM • condition

    ODDSYM  shift, and go to state 49
    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    condition   go to state 114
    expression  go to state 55
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 93

   35 forstm: FORSYM condition WITHSYM • statement THENSYM statement

    BEGINSYM   shift, and go to state 23
    CALLSYM    shift, and go to state 24
    IFSYM      shift, and go to state 25
    READSYM    shift, and go to state 27
    WHILESYM   shift, and go to state 28
    WRITESYM   shift, and go to state 29
    REPEATSYM  shift, and go to state 30
    FORSYM     shift, and go to state 31
    IDENT      shift, and go to state 32

    $default  reduce using rule 26 (statement)

    statement      go to state 115
    assignmentstm  go to state 35
    callstm        go to state 36
    compoundstm    go to state 37
    ifstm          go to state 38
    whilestm       go to state 39
    repeatstm      go to state 40
    forstm         go to state 41
    readstm        go to state 42
    writestm       go to state 43
    ident          go to state 44


State 94

   16 procbody: block SEMICOLON •

    $default  reduce using rule 16 (procbody)


State 95

   27 assignmentstm: ident BECOMES expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 27 (assignmentstm)


State 96

   31 statements: statements SEMICOLON statement •

    $default  reduce using rule 31 (statements)


State 97

   60 factor: LPAREN expression RPAREN •

    $default  reduce using rule 60 (factor)


State 98

   32 ifstm: IFSYM condition THENSYM statement •

    $default  reduce using rule 32 (ifstm)


State 99

   46 condition: expression LSS expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 46 (condition)


State 100

   47 condition: expression LEQ expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 47 (condition)


State 101

   48 condition: expression GTR expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 48 (condition)


State 102

   49 condition: expression GEQ expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 49 (condition)


State 103

   53 expression: expression PLUS term •
   56 term: term • TIMES factor
   57     | term • SLASH factor

    TIMES  shift, and go to state 83
    SLASH  shift, and go to state 84

    $default  reduce using rule 53 (expression)


State 104

   54 expression: expression MINUS term •
   56 term: term • TIMES factor
   57     | term • SLASH factor

    TIMES  shift, and go to state 83
    SLASH  shift, and go to state 84

    $default  reduce using rule 54 (expression)


State 105

   44 condition: expression EQL expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 44 (condition)


State 106

   45 condition: expression NEQ expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 45 (condition)


State 107

   56 term: term TIMES factor •

    $default  reduce using rule 56 (term)


State 108

   57 term: term SLASH factor •

    $default  reduce using rule 57 (term)


State 109

   36 readstm: READSYM LPAREN readvarlist RPAREN •

    $default  reduce using rule 36 (readstm)


State 110

   38 readvarlist: readvarlist COMMA • readvar

    IDENT  shift, and go to state 32

    readvar  go to state 116
    ident    go to state 88


State 111

   33 whilestm: WHILESYM condition DOSYM statement •

    $default  reduce using rule 33 (whilestm)


State 112

   40 writestm: WRITESYM LPAREN writeexplist RPAREN •

    $default  reduce using rule 40 (writestm)


State 113

   42 writeexplist: writeexplist COMMA • expression

    PLUS    shift, and go to state 50
    MINUS   shift, and go to state 51
    LPAREN  shift, and go to state 52
    IDENT   shift, and go to state 32
    NUMBER  shift, and go to state 53

    expression  go to state 117
    term        go to state 56
    factor      go to state 57
    ident       go to state 58


State 114

   34 repeatstm: REPEATSYM statement UNTILSYM condition •

    $default  reduce using rule 34 (repeatstm)


State 115

   35 forstm: FORSYM condition WITHSYM statement • THENSYM statement

    THENSYM  shift, and go to state 118


State 116

   38 readvarlist: readvarlist COMMA readvar •

    $default  reduce using rule 38 (readvarlist)


State 117

   42 writeexplist: writeexplist COMMA expression •
   53 expression: expression • PLUS term
   54           | expression • MINUS term

    PLUS   shift, and go to state 79
    MINUS  shift, and go to state 80

    $default  reduce using rule 42 (writeexplist)


State 118

   35 forstm: FORSYM condition WITHSYM statement THENSYM • statement

    BEGINSYM   shift, and go to state 23
    CALLSYM    shift, and go to state 24
    IFSYM      shift, and go to state 25
    READSYM    shift, and go to state 27
    WHILESYM   shift, and go to state 28
    WRITESYM   shift, and go to state 29
    REPEATSYM  shift, and go to state 30
    FORSYM     shift, and go to state 31
    IDENT      shift, and go to state 32

    $default  reduce using rule 26 (statement)

    statement      go to state 119
    assignmentstm  go to state 35
    callstm        go to state 36
    compoundstm    go to state 37
    ifstm          go to state 38
    whilestm       go to state 39
    repeatstm      go to state 40
    forstm         go to state 41
    readstm        go to state 42
    writestm       go to state 43
    ident          go to state 44


State 119

   35 forstm: FORSYM condition WITHSYM statement THENSYM statement •

    $default  reduce using rule 35 (forstm)
